--- a/운영체제/운영체제.md
+++ b/운영체제/운영체제.md
@@ -46,3 +46,67 @@
 - 프로세스의 생성 및 삭제
 - CPU할당을 위한 스케줄 결정
 - 프로세스의 상태를 관리하며 상태 전이 처리
+
+마우스로 브라우저를 실행시키면 메모리상에 특정위치에 브라우저를 올리고  프로세스가 만들어짐
+
+프로세스란? 실행중인 프로그램
+
+브라우저를 실행시키기 위해서 명령을 시키는건 cpu가 하는것 하지만 CPU가 하나밖에 없으면 스케줄링을 운영체제가 해주어야 함</br></br>
+
+<strong>메모리 관리자</strong></br>
+
+메모리(주기억장치) 공간에 대한 요구의 유효성 확인</br></br>
+메모리 할당 및 회수 (예를 들어 브라우저를 실행할때 얼마만큼의 메모리를 할당할지 , 새로운 문서편집기를 할당할때 브라우저와 겹치지 않게 메모리 공간을 잘 할당함)</br></br>
+메모리 공간 보호(운영체제나 커널도 메모리를 할당 받아서 사용하는데 운영체제를 침범하도록 메모리를 할당하면 컴퓨터 시스템에 문제가 생기므로 메모리 공간을 잘 보호해주어야 한다.)
+
+<strong>파일 관리자</strong></br>
+
+컴퓨터 시스템의 모든 파일 관리</br>
+저장장치의 공간 관리</br>
+파일의 접근 제한 관리</br>
+
+운영체제의 유형
+
+- 일괄처리 운영체제
+- 시분할 운영체제
+- 실시간 운영체제
+- 분산 운영체제
+</br></br>
+
+<strong>일괄처리 운영체제</strong></br>
+Batch processing</br>
+- 작업을 모아서 순서대로 처리하는 방식</br>
+사람(오퍼레이터)이 하던 일을 프로그램이 빠르게 처리하게 되면서 전체적인 작업 처리 속도가 향상됨
+-나중에 들어온 작업은 앞선 작업들이 모두 끝날 때까지 아무런 상호작용 없이 기다려야만 함
+</br></br>
+
+<strong>시분할 운영체제</strong></br>
+Time-sharing</br>
+- 각 사용자의 프로그램을 한 번에 조금씩 수행하는 방식 
+- 대화형(interactive) 운영체제라고도 함
+- 사용자들은 마치 혼자 컴퓨터를 사용하는 듯한 느낌을 받음
+- 응답시간이 일괄처리 운영체제보다 크게 단축됨(응답시간 : 요청한 시점부터 반응이 시작되는 시점까지의 소요시간)
+</br></br>
+<strong>실시간 운영체제</strong></br>
+Real-time</br>
+- 원하는 시간 내에 프로그램의 결과를 얻을 수 있는 방식
+- 처리결과가 현재의 결정에 영향을 주는 환경에서 사용됨 ( 미사일 제어 시스템, 증권거래 관리 시스템 등)
+- 중요한 작업에 대한 처리 기한을 맞추는 것이 중요(우선순위가 높은 작업을 우선 처리할 수 있는 기법 활용)</br></br>
+
+<strong>분산 운영체제</strong></br>
+- 분산 시스템을 관리하기 위한 운영체제
+(분산 시스템 : 2개 이상의 컴퓨터 시스템이 네트워크로 서로 연결되어 서로의 자원을 이용하는 시스템)
+- 다른 컴퓨터 시스템의 자원을 이용하는 것이 마치 자신의 컴퓨터 시스템에 있는 자원을 이용하는 것처럼 가능해야 함
+
+
+<strong>정리하기</strong></br>
+
+1. 운영체제는 컴퓨터 시스템의 자원을 관리하고 컴퓨터 프로그램이 동작하기 위한 서비스를 제공하는 프로그램들의 모습으로 대표적인 시스템 소프트웨어이다.
+
+2. 커널 모드는 하드웨어를 직접 제어할 수 있는 CPU의 명령어를 사용할 수 있는 모드이고, 사용자 모드는 하드웨어를 직접 제어할 수 있는 cpu의 명령어를 사용할 수 없는 모드이다.
+
+3. 응용 프로그램은 사용자 모드에서 동작하기에, 하드웨어에 대한 제어가 필요한 경우 시스템 호출을 통해 필요한 서비스를 운영체제에 요청해야한다.
+
+4. 운영체제의 주요 구성요소에는 프로세스 관리자, 메모리관리자, 장치 관리자, 파일 관리자가 있다.
+
+5. 운영체제의 대표적인 유형으로는 일괄처리 운영체제, 시분할 운영체제, 실시간 운영체제, 분산 운영체제가 있다.
