비선점형 스케줄링

--- a/운영체제/프로세스와 쓰레드.md
+++ b/운영체제/프로세스와 쓰레드.md
@@ -30,7 +30,22 @@
 <strong>프로세스 제어 블록</strong><br/><br/>
 Process Control Block : PCB
 - 운영체제가 프로세스를 관리하기 위해 필요한 정보 
-( 프로세스 번호 (PID), 프로세스 상태, 프로그램 카운터(PC),레지스터, 메모리 관리 정보, 프로세스 우선 순위, 회계정보 등)
+( 프로세스 번호 (PID), 프로세스 상태, 프로그램 카운터(PC),레지스터, 메모리 관리 정보( 가상메모리의 매핑 정보), 프로세스 우선 순위, 회계정보 등)
+<br>
+- 각 프로세스마다 존재 
+- 여러 프로세스가 번갈아 실행되는 경우 PCB에 저장된 정보 활용(레지스터)<br><br>
+
+
+<strong>프로세스 상태</strong><br/>
+( 생성, 준비, 실행, 종료, 대기)<br/>
+생성 - 처음 작업이 시스템에 주어진 상태<br/>
+준비 - 실행 준비가 되어 CPU할당을 기다리는 상태<br/>
+실행 - 프로세스가 처리되는 상태<br/>
+대기 - 프로세스 I/O작업이 끝날때까지 또는 특정 자원을 할당받을 때까지 보류되는 상태 <br/>
+종료 - 프로세스가 더 이상 실행되지 않도록 끝난 상태 <br/><br/>
+
+디스패치 (특정 프로세스에다가 CPU를 할당해주는 과정)
+
 
 
 
