--- a/study/0411.md
+++ b/study/0411.md
@@ -16,3 +16,67 @@ localhost = 127.0.0.1 은 가상의 ip인데 일반적인 ip는 네트워크가 
  LAN은 독립된 네트워크 공간이다.
  LAN을 구축하면 LAN외부에서는 LAN 내부에 접근할 수 없다. 
  네트워크를 구축하는데 90%이상이 이더넷을 사용한다. 
+
+
+
+ IPsec
+ IPsec는 IP레이어에서 인터넷 통신에 보안을 제공하는 프로토콜 모음
+
+ TCP/IP (Transmission Control Protocol(전송 제어 프로토콜) / Intertnet Protocol)
+ - 현재 수많은 프로그램들이 인터넷으로 통신하는데 있어 가장 기반이 되는 프로토콜로 실제 대다수 프로그램이 TCP와 IP로 통신
+
+ ARPANET이 개발된 이후 현재의 인터넷으로 발전해나가는 과정에서 대부분의 데이터 통신이 TCP와 IP기반으로 이루어졌기에 인터넷 프로토콜 그 자체를 표현하는 용어이기도 했고, 다양한 프로토콜이 개발된 현 시점에도 사실상 인터넷 프로토콜을 대표하는 용어로 사용중이다 .이를 이용해서 컴퓨터를 연결하는 체계를 이더넷(Ethernet)이라고 부른다.
+
+ 보통 하나로 표현하기 하나 TCP와 IP는 별개이다.
+ 네트워크의 경우 계층이 정의되어 있고 각 계층마다 하는 역할과 책임지는 영역이 나뉘어져 있기 때문에 묶어서 표현한다는 것 뿐이지 역할에는 많은 차이가 있다. 
+
+ IP(인터넷 프로토콜)<br>
+ 데이터 출처와 목적지를 표시하여 데이터 라우팅을 담당한다.  IP는 네트워크 간 통신을 가능하게 하며 네트워크 계층(3) 프로토콜로 간주된다. <br><br>
+
+ TCP(전송 제어 프로토콜)는 네트워크를 통한 데이터 패킷의 전송이 원활하게 진행되도록 한다. 따라서 TCO는 전송 계층 (계층4) 프로토콜로 간주된다. 
+
+
+![title](/Image/i3l96ni7.png)
+
+<br>
+
+1계층 네트워크 엑세스 계층 (Network Access Layer or Network Interface Layer)<br>
+OSI 7계층의 물리계층과 데이터 링크 계층에 해당한다.<br>
+물리적인 주소로 MAC을 사용한다.<br>
+LAN, 패킷망, 등에 사용된다.<br><br>
+
+2계층 인터넷 계층(Internet Layer)<br>
+OSI 7 계층의 네트워크 계층에 해당한다.<br>
+통신 노드 간의 IP패킷을 전송하는 기능과 라우팅 기능을 담당한다.<br> 프로토콜 -IP,ARP,RARP<br><br>
+
+3계층 전송 계층(Transprot Layer)<br>
+OSI 7계층의 전송 계층에 해당한다.<br>
+통신 노드 간의 연결을 제어하고, 신뢰성 있는 데이터 전송을 담당한다.<br>
+프로토콜 - TCP, UDP<br><br>
+
+4계층 응용 계층(Applicaiton Layer)<br>
+OSI 7 계층의 세션 계층, 표현 계층, 응용 계층에 해당한다. <br>
+TCP/UDP 기반의 응용 프로그램을 구현할 때 사용한다.<br>
+프로토콜 - FTP, HTTP, SSH
+
+<br>
+<br>
+프로토콜이란 ? <br><br>
+프로토콜은 데이터 서식 지정 및 처리를 위한 규칙 집합으로 네트워크 프로토콜은 컴퓨터의 공통 언어와 같다. 네트워크 내의 컴퓨터는 매우 다른 소프트웨어와 하드웨어를 사용할 수 있지만 프로토콜을 사용하면 관계없이 서로 통신 할 수 있다. <br><br>
+
+표준화된 프로토콜은 컴퓨터가 사용할 수 있는 공통 언어와 같다.<br><br>
+
+패킷이란?<br>
+데이터의 작은 부분으로 네트워크를 통해 전송되는 모든 데이터는 패킷으로 나뉜다. <br>
+그런 다음 이러한 패킷은 패킷을 수신하는 컴퓨터 또는 장치에 의해 재결합된다.<br>
+ex) 이미지파일 로드 할때 웹서버에서 사용자 컴퓨터로 한번에 이동하지 않으며 데이터 패킷으로 분해되어 인터넷의 유선, 케이블  및 전파를 통해 전송 된 다음 사용자의 컴퓨터에서 원본 사진으로 재조립됨 <br><br>
+
+네트워크란?<br>
+두 대 이상의 연결된 컴퓨터 그룹으로 인터넷은 서로 상호 연결된  전 세계의 전 세계의 여러 네트워크인 네트워크 네트워크이다. <br><br>
+
+패킷을 사용하는 이유는?<br>
+
+
+
+
+
