--- a/운영체제/운영체제.md
+++ b/운영체제/운영체제.md
@@ -1,3 +1,34 @@
+1. 컴퓨터 시스템의 구성
+
+하드웨어(기계장치)와 소프트웨어(프로그램)로 이루어져 있음
+
+소프트웨어
+- 응용소프트웨어
+- 시스템 소프트웨어 ( 하드웨어와 응용 소프트웨어의 매개체 역할을 함.)
+ㄴ ex) 컴파일러, window11, macOS같은 운영체제
+
+운영체제란?
+- 대표적인 시스템 소프트웨어
+- 컴퓨터 시스템의 자원을 관리하고 컴퓨터 프로그램이 동작하기 위한 서비스를 제공하는 프로그램들의 모음
+
+운영체제의 역할
+- 컴퓨터 시스템의 자원 관리 : 자원이란 하드웨어 자원, 소프트웨어 자원, 데이터를 말함.
+컴퓨터 시스템을 효율적으로 운영하는 목적 
+ex) 저장장치에서 데이터 읽어오기, 키보드나 마우스 제어, 프로그램 동시 실행시 CPU와 메모리 효율적으로 관리
+
+- 사용자 지원: 사용자가 내린 명령을 해석하여 실행하게 함, 사용자가 하드웨어 사이의 매개체 역할,
+사용자에게 편의성을 제공하는 목적
+
+컴퓨터 시스템과 운영체제
+- 운영체제가 없던 초기의 컴퓨터 시스템 : 응용 프로그램이 직접 컴퓨터 시스템의 자원 제어 (응용 프로그램 개발자는 하드웨어 제어 방법을 잘 알아야 함)
+- 여러 사용자가 하드웨어를 공유하는 경우 자원 분할 어려움
+
+-운영체제가 있는 컴퓨터 시스템 : 하드웨어와 응용 프로그램 사이에 운영체제 위치 (운영체제가 
+컴퓨터 시스템의 자원 제어)
+- 컴퓨터 시스템이 안정적이고 효율적으로 동작하도록함.
+
+커널모드와 사용자 모드
+
 커널모드(슈퍼바이저 모드) :
 
 - 하드웨어를 직접 제어할 수 있는 CPU 명령어를 사용할 수 있는 모드
@@ -15,7 +46,7 @@
 - 커널모드에서 동작하는 운영체제의 핵심요소
 - 응용프로그램과 하드웨어 수준의 처리 사이의 가교 역할
 
-일체형 커널(monolithic kernel)
+일체형 커널(monolithic kernel) = Os자체임
 
 - 운영체제의 모든 서비스가 커널 내에 포함됨
 - 장점 : 커널 내부 요소들이 서로 효율적으로 상호작용을 함
@@ -24,28 +55,31 @@
 
 마이크로커널(microkernel)
 
-- 운영체제 요소의 대부분을 커널 외부로 분리 (운영체제의 다른 요소들은 사용자모들)
+- 운영체제 요소의 대부분을 커널 외부로 분리 (운영체제의 다른 요소들은 사용자모드에서 동작)
 - 메모리 관리, 멀티태스킹, 프로세스 간 통신(IPC)등 최소한의 요소만 커널 내에 남김
 - 장점 : 새로운 서비스를 추가하여 운영체제를 확장하기 쉬움,
   유지보수가 용이하여 안정성이 우수함
 - 단점 : 커널 외부 요소들 사이는 IPC가 필요하여 성능저하 발생
 
 커널모드와 사용자모드
-시스템호출
+시스템호출 (하드웨어를 건드리고 싶다 운영체제가 대신해줘)
 
 - 응용 프로그램이 하드웨어에 대한 제어가 필요한 경우 이용
-- 운영체제에 서비스를 요청하는 매커니즘
+- 운영체제에 서비스를 요청하는 매커니즘(요청시 사용자모드 -> 커널모드로 변경)
 
-운영체제의 구성
+2. 운영체제의 구성
 
 - 컴퓨터 시스템의 자원의 성격에 따라 구분
-  (프로세스 관리자, 메모리 관리자, 파일 관리자, 장치 관리자)
+  (프로세스 관리자, 메모리 관리자(ram), 파일 관리자, 장치 관리자)
 
-프로세스 관리자 (프로세스 : 실행중인 프로그램)
+<strong>프로세스 관리자 (프로세스 : 실행중인 프로그램)</strong></br>
 
 - 프로세스의 생성 및 삭제
 - CPU할당을 위한 스케줄 결정
 - 프로세스의 상태를 관리하며 상태 전이 처리
+
+저장장치에는 프로그램 파일들이 있음(브라우저, 문서편집기) 실행하면 메모리상에 올려짐 프로세스는 이렇게
+실행중인 프로그램을 뜻함
 
 마우스로 브라우저를 실행시키면 메모리상에 특정위치에 브라우저를 올리고  프로세스가 만들어짐
 
