--- a/운영체제/프로세스 스케줄링.md
+++ b/운영체제/프로세스 스케줄링.md
@@ -110,4 +110,11 @@ RR(Round Robin) 스케줄링<br/>
  I/O 방식 프로세스와 연산 중심 프로세스의 특성에 따라 서로 다른 시간 할당량 부여<br/>
  단계 1부터 단계 n까지 하나씩의 준비 큐 존재 <br/>
  단계 k는 단계 k+1 에 피드백<br/>
- 단계가 커질수록 시간 할당량도 커짐<br/>
+ 단계가 커질수록 시간 할당량도 커짐<br/><br/>
+ 스케줄링 방법 <br/>
+ 디스패치 후 대기 상태로 갔다가 준비 상태가 될 때에는 현재와 동일한 단계의 준비 큐에 배치<br/>
+ 시간 할당량을 다 썼으면 다음 단게의 준비 큐로 이동 배치<br/>
+ 단계 k의 준비 큐에 있는 프로세스가 디스패치되려면 단계 1부터 단계 k-1까지 모든 준비 큐가 비어 있어야만 한다.<br/>
+ 특징<br/>
+ I/O 위주 프로세스는 높은 우선권 유지<br/>
+ 연산 위주의 프로세스는 낮은 우선권이지만 긴 시간 할당량<br/>
