--- a/운영체제/교착상태 1.md
+++ b/운영체제/교착상태 1.md
@@ -35,5 +35,24 @@
 프로세스의 자원 점유 및 점유된 자원의 요구관계가 환형을 이루며 대기하는 상황<br/><br/><br/>
 
 자원할당 그래프 G=(V,E)<br/><br/>
-V : 정점의 집합 V = P u R
-R = (r1, 43,)
+V : 정점의 집합 V = P u R<br/>
+P = n개의 프로세스 (원) , R = (r1, 43,) m개의 자원 (네모) <br/>
+E : 방향 있는 간선의 집합 E = Q u S<br/>
+Q = 프로세스 pi가 자원 rj를 요구 (요구간선) <br/>
+S = 자원rj 가 프로세스 pi에 할당 (할당간선)<br/><br/>
+
+자원할당 그래프 예<br/>
+정점의 집합 V = P u R<br/>
+프로세스 집합 P = { p1, p2, p3} , 자원 집합 R = {r1, r2, r3}<br/>
+방향 있는 간선의 집합 E = Q u S<br/>
+요구간선 집합 Q = {(p1, r2)}, 할당 간선 집합 S = {(r1,p1,), (r2,p2,), (r3,p3,)}<br/><br/><br/>
+자원할당 그래프의 변화<br/>
+p2가 r3을 요구하는 경우<br/>
+요구간선(p2, r3)추가<br/>
+가용한 단위자원 존재하면 할당간선(r3, p2)로 바꿈<br/><br/>
+
+교착상태의 필요조건 표현 <br/>
+상호배제  : 하나의 할당간선<br/>
+점유대기 : 한 프로세스에 할당간선과 요구간선 연결<br/>
+비선점 : 요구간선<br/>
+환형대기 : 사이클(cycle)<br/>
